infrastructure/kubernetes/tedmcp/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tedmcp-svc
  namespace: tedmcp
spec:
  type: ClusterIP
  selector:
    app: tedmcp
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
